# NAK-BA-CIPipelineArtefactStorage

./: .gitignore  LICENSE.md
data/: README.md  ml_data.csv
data-collection/gitlab-webhook-logger/: .dockerignore  Cargo.toml  Dockerfile
data-collection/gitlab-webhook-logger/src/: main.rs
data-presentation/plotting/: access_count_distribution.py  access_event_relation.py  artifact_size.py  batch_lineplot.py  event_time_relation.py  file_block_alignment.py  file_counts_histogram.py  generate.sh  ml_datagen.py  mru_fallback.py  pipeline_size_histogram.py  requirements.txt  size_ramp_heatmap.py  tabular_pipeline_counts.py
data-presentation/plotting/manual/: access-counts.csv  access-groups.csv  access-groups.numbers  size-outliers.csv  size-outliers.numbers
data-processing/big-data-pipeline/: Package.swift  README.md
data/simulation/batch/: LIFO.csv  SCORE.csv  (+10 more)
latex/: BA.cls  literature.bib  main.tex
machine-learning/RelevancyClassifier.mlproj/: Project.json
simulation/: Cargo.toml  run.sh  sizes.txt
simulation/src/: main.rs  opts.rs
simulation/src/algorithms/: fifo.rs  largest_first.rs  lifo.rs  lru.rs  merged.rs  mod.rs  mru.rs  mru_ranged.rs  random.rs  smallest_first.rs  status.rs
simulation/src/algorithms/scoring/: age.rs  algorithm.rs  merged.rs  mod.rs  status.rs
simulation/src/implementation/: algorithm.rs  algorithm_data_source.rs  data_source.rs  ml_generator.rs  mod.rs  simulation.rs  size_sampler.rs  state.rs  static_ml_generator.rs  statistics.rs
simulation/src/implementation/old/: data_source.rs  main_old.rs  simulation.rs  state.rs
(+95 files in other folders)
