[package]
name = "simulation"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.2", features = [ "runtime-async-std-native-tls", "sqlite" ] }
async-std = { version = "1.8.0", features = ["attributes"] }
anyhow = "1.0.37"
futures = "0.3.8"
rand = "0.8.1"
bytesize  = "1.0.1"
async-trait = "0.1.42"
clap = "3.0.0-beta.2"
indicatif = "0.15.0"
cached = "0.22.0"
log = "0.4.0"
env_logger = "0.8.2"