[package]
name = "gitlab-webhook"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "io-driver", "macros", "sync", "time", "fs", "stream"] }
anyhow = "1.0"
pretty_env_logger = "0.4.0"